--- a/link/index.html
+++ b/link/index.html
@@ -113,7 +113,7 @@
     <div id="search-dropdown-mobile"></div>
 </div>
 <main class="main">
-                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">友链</h1><div class="content" id="content"><div class="bilibili"><iframe src="//player.bilibili.com/player.html?bvid=BV1Sx411T7QQ&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe></div>
+                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">友链</h1><div class="content" id="content"><div class="bilibili"><iframe src="//player.bilibili.com/player.html?bvid=BV1BT4y1g7mk&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe></div>
 
 </div><div id="comments"></div></div></div>
             </main><footer class="footer">
