--- a/20170101/index.html
+++ b/20170101/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>python图片切片 - bysec</title><meta name="Description" content="bysec个人博客"><meta property="og:title" content="python图片切片" />
+        <title>python图片切片 - bysec</title>
+        <link rel="preconnect" href="https://www.bysec.cn/index.json"><meta name="Description" content="bysec个人博客"><meta property="og:title" content="python图片切片" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://www.bysec.cn/20170101/" /><meta property="og:image" content="https://www.bysec.cn/logo.png"/><meta property="article:section" content="posts" />
@@ -38,8 +39,7 @@
     </script></head>
     <body header-desktop="fixed" header-mobile="auto"><script type="text/javascript">(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
 
-        <div id="mask"></div><div class="wrapper"><link rel="preconnect" href="https://www.bysec.cn/index.json">
-<header class="desktop" id="header-desktop">
+        <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
             <a href="/" title="bysec"><img
