--- a/404.html
+++ b/404.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>404 页面没找到 - bysec</title><meta name="Description" content="bysec个人博客"><meta property="og:title" content="404 Page not found" />
+        <title>404 页面没找到 - bysec</title>
+        <link rel="preconnect" href="https://www.bysec.cn/index.json"><meta name="Description" content="bysec个人博客"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="bysec个人博客" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.bysec.cn/404.html" /><meta property="og:image" content="https://www.bysec.cn/logo.png"/>
@@ -19,8 +20,7 @@
 <meta name="apple-mobile-web-app-title" content="LoveIt"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="/OSS/avatar/favicon.ico"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://www.bysec.cn/404.html" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"></head>
     <body header-desktop="fixed" header-mobile="auto"><script type="text/javascript">(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
 
-        <div id="mask"></div><div class="wrapper"><link rel="preconnect" href="https://www.bysec.cn/index.json">
-<header class="desktop" id="header-desktop">
+        <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
             <a href="/" title="bysec"><img
