--- a/20160801/index.html
+++ b/20160801/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="noodp" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <title>C# 通过URL获取图片并显示在PictureBox上的方法 - bysec</title>
-    <link rel="preconnect" href="https://www.bysec.cn/index.json"><meta name="Description" content="bysec个人博客"><meta property="og:title" content="C# 通过URL获取图片并显示在PictureBox上的方法" />
+    <link rel="prerender" href="https://www.bysec.cn/index.json"><meta name="Description" content="bysec个人博客"><meta property="og:title" content="C# 通过URL获取图片并显示在PictureBox上的方法" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://www.bysec.cn/20160801/" /><meta property="og:image" content="https://www.bysec.cn/logo.png"/><meta property="article:section" content="posts" />
