--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="noodp" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <title>关于 - bysec</title>
-    <link rel="preconnect" href="https://www.bysec.cn/index.json"><meta name="Description" content="bysec个人博客"><meta property="og:title" content="关于" />
+    <link rel="prerender" href="https://www.bysec.cn/index.json"><meta name="Description" content="bysec个人博客"><meta property="og:title" content="关于" />
 <meta property="og:description" content="警告 《中华人民共和国网络安全法》是为保障网络安全，维护网络空间主权和国家安全、社会公共利益，保护公民、法人和其他组织的合法权益，促进经济社会" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://www.bysec.cn/about/" /><meta property="og:image" content="https://www.bysec.cn/logo.png"/><meta property="article:section" content="" />
