--- a/20151101/index.html
+++ b/20151101/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noodp" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <title>Win10创建快捷方式时去掉快捷方式后缀 - bysec</title>
-    <link rel="prerender" href="https://www.bysec.cn/index.json"><meta name="Description" content="bysec个人博客"><meta property="og:title" content="Win10创建快捷方式时去掉快捷方式后缀" />
+    <title>Win10创建快捷方式时去掉快捷方式后缀 - bysec</title><meta name="Description" content="bysec个人博客"><meta property="og:title" content="Win10创建快捷方式时去掉快捷方式后缀" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://www.bysec.cn/20151101/" /><meta property="og:image" content="https://www.bysec.cn/logo.png"/><meta property="article:section" content="posts" />
