--- a/20160501/index.html
+++ b/20160501/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noodp" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <title>PyQt5多线程模块QThread使用方法 - bysec</title>
-    <link rel="prerender" href="https://www.bysec.cn/index.json"><meta name="Description" content="bysec个人博客"><meta property="og:title" content="PyQt5多线程模块QThread使用方法" />
+    <title>PyQt5多线程模块QThread使用方法 - bysec</title><meta name="Description" content="bysec个人博客"><meta property="og:title" content="PyQt5多线程模块QThread使用方法" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://www.bysec.cn/20160501/" /><meta property="og:image" content="https://www.bysec.cn/logo.png"/><meta property="article:section" content="posts" />
