--- a/20210201/index.html
+++ b/20210201/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noodp" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <title>给表弟的Web安全入门建议 - bysec</title>
-    <link rel="prerender" href="https://www.bysec.cn/index.json"><meta name="Description" content="bysec个人博客"><meta property="og:title" content="给表弟的Web安全入门建议" />
+    <title>给表弟的Web安全入门建议 - bysec</title><meta name="Description" content="bysec个人博客"><meta property="og:title" content="给表弟的Web安全入门建议" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://www.bysec.cn/20210201/" /><meta property="og:image" content="https://www.bysec.cn/logo.png"/><meta property="article:section" content="posts" />
