--- a/404.html
+++ b/404.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noodp" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <title>404 页面没找到 - bysec</title>
-    <link rel="prerender" href="https://www.bysec.cn/index.json"><meta name="Description" content="bysec个人博客"><meta property="og:title" content="404 Page not found" />
+    <title>404 页面没找到 - bysec</title><meta name="Description" content="bysec个人博客"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="bysec个人博客" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.bysec.cn/404.html" /><meta property="og:image" content="https://www.bysec.cn/logo.png"/>
