--- a/about/index.html
+++ b/about/index.html
@@ -126,12 +126,12 @@
 <p>邮箱: <a href="mailto:CNbysec@foxmail.com" rel="">CNbysec@foxmail.com</a></p>
 </blockquote>
 <h2 id="关于作者">关于作者</h2>
-<blockquote>
-<p>技术宅，热爱关于计算机的一切
-强迫症与拖延症患者
-热衷于了解世界的运转机制
-<a href="/love/" rel="">❤️</a> 爱好游戏、摄影</p>
-</blockquote>
+<ul>
+<li>技术宅，热爱关于计算机的一切</li>
+<li>强迫症与拖延症患者</li>
+<li>热衷于了解世界的运转机制</li>
+<li><a href="/love/" rel="">❤️</a> 爱好游戏、摄影</li>
+</ul>
 <h2 id="关于版权">关于版权</h2>
 <p><strong>本站所有的原创文章均受 <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener noreffer">创作共享 署名-非商业性 4.0 许可协议 / CC BY-NC 4.0</a> 保护。</strong></p>
 <h2 id="用户条款">用户条款</h2>
