--- a/安全技能书简版/index.html
+++ b/安全技能书简版/index.html
@@ -446,11 +446,11 @@
 </blockquote>
 <p><img
         class="lazyload"
-        data-src="/OSS/image/20210101/1.png"
-        data-srcset="/OSS/image/20210101/1.png, /OSS/image/20210101/1.png 1.5x, /OSS/image/20210101/1.png 2x"
+        data-src="/OSS/image/%e5%ae%89%e5%85%a8%e6%8a%80%e8%83%bd%e4%b9%a6%e7%ae%80%e7%89%88/1.png"
+        data-srcset="/OSS/image/%e5%ae%89%e5%85%a8%e6%8a%80%e8%83%bd%e4%b9%a6%e7%ae%80%e7%89%88/1.png, /OSS/image/%e5%ae%89%e5%85%a8%e6%8a%80%e8%83%bd%e4%b9%a6%e7%ae%80%e7%89%88/1.png 1.5x, /OSS/image/%e5%ae%89%e5%85%a8%e6%8a%80%e8%83%bd%e4%b9%a6%e7%ae%80%e7%89%88/1.png 2x"
         data-sizes="auto"
-        alt="/OSS/image/20210101/1.png"
-        title="/OSS/image/20210101/1.png"
+        alt="/OSS/image/安全技能书简版/1.png"
+        title="/OSS/image/安全技能书简版/1.png"
     /></p>
 <h2 id="http">HTTP</h2>
 <h3 id="burpsuite">BurpSuite</h3>
