--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         <div class="header-title">
             <a href="/" title="bysec"><img
         class="lazyload logo"
-        data-src="/OSS/Zelda.ico"
-        data-srcset="/OSS/Zelda.ico, /OSS/Zelda.ico 1.5x, /OSS/Zelda.ico 2x"
+        data-src="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
+        data-srcset="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100, https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100 1.5x, https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100 2x"
         data-sizes="auto"
-        alt="/OSS/Zelda.ico"
-        title="/OSS/Zelda.ico"
+        alt="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
+        title="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
     />bysec</a>
         </div>
         <div class="menu">
@@ -77,11 +77,11 @@
             <div class="header-title">
                 <a href="/" title="bysec"><img
         class="lazyload logo"
-        data-src="/OSS/Zelda.ico"
-        data-srcset="/OSS/Zelda.ico, /OSS/Zelda.ico 1.5x, /OSS/Zelda.ico 2x"
+        data-src="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
+        data-srcset="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100, https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100 1.5x, https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100 2x"
         data-sizes="auto"
-        alt="/OSS/Zelda.ico"
-        title="/OSS/Zelda.ico"
+        alt="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
+        title="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
     />bysec</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
