--- a/kali修改为国内源/index.html
+++ b/kali修改为国内源/index.html
@@ -339,7 +339,7 @@ deb http://deb.debian.org/debian-security/ buster/updates main contrib non-free
         </main><footer class="footer">
         <div class="footer-container"><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2020 - 2021</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="https://www.bysec.cn/" target="_blank" rel="noopener noreferrer">bysec</a></span></div>
         </div><div class="Canvas" id="L2dCanvas"></div>
-        <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+        <script src="https://cdn.bootcdn.net/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         
         <script src="https://www.bysec.cn/OSS/js/live2dcubismcore.min.js"></script>
         
