--- a/link/index.html
+++ b/link/index.html
@@ -185,7 +185,7 @@
             </noscript></div></div></div>
         </main><footer class="footer">
         <div class="footer-container"><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2020 - 2021</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="https://www.bysec.cn/" target="_blank" rel="noopener noreferrer">bysec</a></span></div>
-        </div><script src="https://cdn.bootcdn.net/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        </div><script src="https://www.bysec.cn/OSS/js/jquery.min.js"></script>
         <script src="https://www.bysec.cn/OSS/js/live2dcubismcore.min.js"></script>
         <script src="https://www.bysec.cn/OSS/js/pixi.min.js"></script>
         <script src="https://www.bysec.cn/OSS/js/live2dcubismframework.js"></script>
