--- a/kali修改为国内源/index.html
+++ b/kali修改为国内源/index.html
@@ -353,7 +353,7 @@ deb http://deb.debian.org/debian-security/ buster/updates main contrib non-free
                 left: '0px',
                 bottom: '0px',
                 basePath: 'https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/',
-                role: 'edu_3',
+                role: 'shengluyisi_2_hx',
                 
                 opacity: 1
             }
