--- a/绕waf系列之绕安全狗/index.html
+++ b/绕waf系列之绕安全狗/index.html
@@ -613,7 +613,7 @@ Content-Length头长度大于4008
                 left: '0px',
                 bottom: '0px',
                 basePath: 'https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/',
-                role: 'edu_3',
+                role: 'shengluyisi_2_hx',
                 
                 opacity: 1
             }
