--- a/绕waf系列之绕安全狗/index.html
+++ b/绕waf系列之绕安全狗/index.html
@@ -608,12 +608,12 @@ Content-Length头长度大于4008
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
             var config = {
-                width: 300,
-                height: 300,
+                width: '500px',
+                height: '500px',
                 left: '0px',
                 bottom: '0px',
                 basePath: 'https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/',
-                role: 'shengluyisi_2_hx',
+                role: 'tianlangxing_3',
                 
                 opacity: 1
             }
