--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
             var config = {
-                width: 600,
-                height: 600,
-                left: '-9%',
-                bottom: '-11%',
+                width: 350,
+                height: 500,
+                left: '0',
+                bottom: '0',
                 basePath: 'https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/',
                 role: 'luyijiushi_2',
                 
