--- a/kali修改为国内源/index.html
+++ b/kali修改为国内源/index.html
@@ -350,8 +350,8 @@ deb http://deb.debian.org/debian-security/ buster/updates main contrib non-free
             var config = {
                 width: 600,
                 height: 600,
-                left: '-120px',
-                bottom: '-80px',
+                left: '0',
+                bottom: '0',
                 basePath: 'https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/',
                 role: 'luyijiushi_2',
                 
