--- a/安全技能书简版/index.html
+++ b/安全技能书简版/index.html
@@ -757,8 +757,8 @@
             var config = {
                 width: 600,
                 height: 600,
-                left: '-120px',
-                bottom: '-80px',
+                left: '0',
+                bottom: '0',
                 basePath: 'https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/',
                 role: 'luyijiushi_2',
                 
