--- a/404.html
+++ b/404.html
@@ -140,7 +140,7 @@
             }
             var v = new Viewer(config);
         </script>
-
+        404 Page not found
     </footer></div>
 
     <div id="fixed-buttons"><a href="#back-to-top" id="back-to-top-button" class="fixed-button" title="回到顶部">
