--- a/绕waf系列之绕安全狗/index.html
+++ b/绕waf系列之绕安全狗/index.html
@@ -619,7 +619,7 @@ Content-Length头长度大于4008
             }
             var v = new Viewer(config);
         </script>
-
+        绕waf系列之绕安全狗
     </footer></div>
 
     <div id="fixed-buttons"><a href="#back-to-top" id="back-to-top-button" class="fixed-button" title="回到顶部">
