--- a/kali修改为国内源/index.html
+++ b/kali修改为国内源/index.html
@@ -348,7 +348,7 @@ deb http://deb.debian.org/debian-security/ buster/updates main contrib non-free
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
             var config = {
-                width: 550,
+                width: "550",
                 height: 550,
                 left: '0',
                 bottom: '0',
@@ -359,6 +359,7 @@ deb http://deb.debian.org/debian-security/ buster/updates main contrib non-free
             }
             var v = new Viewer(config);
         </script>
+
     </footer></div>
 
     <div id="fixed-buttons"><a href="#back-to-top" id="back-to-top-button" class="fixed-button" title="回到顶部">
