--- a/绕waf系列之绕安全狗/index.html
+++ b/绕waf系列之绕安全狗/index.html
@@ -608,7 +608,7 @@ Content-Length头长度大于4008
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
             var config = {
-                width: 550,
+                width: "550",
                 height: 550,
                 left: '0',
                 bottom: '0',
@@ -619,6 +619,7 @@ Content-Length头长度大于4008
             }
             var v = new Viewer(config);
         </script>
+
     </footer></div>
 
     <div id="fixed-buttons"><a href="#back-to-top" id="back-to-top-button" class="fixed-button" title="回到顶部">
