--- a/link/index.html
+++ b/link/index.html
@@ -199,10 +199,10 @@
                 height: "550",
                 left: "-120px",
                 bottom: "-80px",
-                basePath: 'https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/',
-                role: 'luyijiushi_2',
-                background: 'https://cdn.jsdelivr.net/gh/alg-wiki/AzurLaneL2DViewer@gh-pages/assets/bg/bg_church_jp.png',
-                opacity: 1
+                basePath: "https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/",
+                role: "luyijiushi_2",
+                background: "",
+                opacity:  1 
             }
             var v = new Viewer(config);
         </script>
