--- a/安全技能书简版/index.html
+++ b/安全技能书简版/index.html
@@ -757,10 +757,10 @@
             var config = {
                 width: "550",
                 height: "550",
-                left: "-120px",
+                left: "-130px",
                 bottom: "-80px",
                 basePath: "https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/",
-                role: "luyijiushi_2",
+                role: "aidang_2",
                 background: "",
                 opacity:  1 
             }
