--- a/about/index.html
+++ b/about/index.html
@@ -179,10 +179,10 @@
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
             var config = {
-                width: "550",
+                width: "400",
                 height: "550",
-                left: "-130px",
-                bottom: "-80px",
+                left: "0",
+                bottom: "0",
                 basePath: "https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/",
                 role: "aidang_2",
                 background: "",
