--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <script src="https://www.bysec.cn/OSS/js/live2dcubismpixi.js"></script>
         <script src="https://www.bysec.cn/OSS/js/l2d.js"></script>
         <script src="https://www.bysec.cn/OSS/js/main.js"></script>
-        <div class="Canvas" id="L2dCanvas" style="z-index: -0.5;"></div>
+        <div class="Canvas" id="L2dCanvas"></div>
         <script>
             var config = {
                 width: "550",
