--- a/kali修改为国内源/index.html
+++ b/kali修改为国内源/index.html
@@ -345,7 +345,7 @@ deb http://deb.debian.org/debian-security/ buster/updates main contrib non-free
         <script src="https://www.bysec.cn/OSS/js/live2dcubismpixi.js"></script>
         <script src="https://www.bysec.cn/OSS/js/l2d.js"></script>
         <script src="https://www.bysec.cn/OSS/js/main.js"></script>
-        <div class="Canvas" id="L2dCanvas" style="z-index: -0.5;"></div>
+        <div class="Canvas" id="L2dCanvas"></div>
         <script>
             var config = {
                 width: "550",
