--- a/kali修改为国内源/index.html
+++ b/kali修改为国内源/index.html
@@ -348,12 +348,12 @@ deb http://deb.debian.org/debian-security/ buster/updates main contrib non-free
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
             var config = {
-                width: "320",
-                height: "320",
+                width: "315",
+                height: "450",
                 left: "0",
                 bottom: "0",
                 basePath: "https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/",
-                role: "aidang_2",
+                role: "luyijiushi_2",
                 background: "",
                 opacity:  1 
             }
