--- a/工具集/index.html
+++ b/工具集/index.html
@@ -187,13 +187,15 @@
         <script src="https://www.bysec.cn/OSS/js/main.js"></script>
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
+            var dataArray = "315";
             var config = {
                 width: "315",
                 height: "450",
                 left: "0",
                 bottom: "0",
                 basePath: "https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/",
-                role: "luyijiushi_2",
+                
+                role: document.write(dataArray[parseInt(Math.random()*dataArray.length)]),
                 background: "",
                 opacity:  1 
             }
