--- a/404.html
+++ b/404.html
@@ -128,7 +128,7 @@
         <script src="https://www.bysec.cn/OSS/js/main.js"></script>
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
-            var dataArray = "315";
+            var dataArray = ["luyijiushi_2","aidang_2"];
             var config = {
                 width: "315",
                 height: "450",
