--- a/link/index.html
+++ b/link/index.html
@@ -194,6 +194,7 @@
         <script src="https://www.bysec.cn/OSS/js/main.js"></script>
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
+            var dataArray = new Array();
             var dataArray = ["luyijiushi_2","aidang_2"];
             var config = {
                 width: "315",
