--- a/kali修改为国内源/index.html
+++ b/kali修改为国内源/index.html
@@ -347,6 +347,7 @@ deb http://deb.debian.org/debian-security/ buster/updates main contrib non-free
         <script src="https://www.bysec.cn/OSS/js/main.js"></script>
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
+            var dataArray = new Array();
             var dataArray = ["luyijiushi_2","aidang_2"];
             var config = {
                 width: "315",
