--- a/绕waf系列之绕安全狗/index.html
+++ b/绕waf系列之绕安全狗/index.html
@@ -607,6 +607,7 @@ Content-Length头长度大于4008
         <script src="https://www.bysec.cn/OSS/js/main.js"></script>
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
+            var dataArray = new Array();
             var dataArray = ["luyijiushi_2","aidang_2"];
             var config = {
                 width: "315",
