--- a/安全技能书简版/index.html
+++ b/安全技能书简版/index.html
@@ -756,6 +756,7 @@
         <script>
             var dataArray = new Array();
             var dataArray = ["luyijiushi_2","aidang_2"];
+            var roles = dataArray[parseInt(Math.random()*dataArray.length)];
             var config = {
                 width: "315",
                 height: "450",
@@ -763,7 +764,7 @@
                 bottom: "0",
                 basePath: "https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/",
                 
-                role: dataArray[parseInt(Math.random()*dataArray.length)],
+                role: roles,
                 background: "",
                 opacity:  1 
             }
