--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 bottom: "0",
                 basePath: "https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/",
                 
-                role: roles,
+                role: dataArray[parseInt(Math.random()*dataArray.length)],
                 background: "",
                 opacity:  1 
             }
