--- a/绕waf系列之绕安全狗/index.html
+++ b/绕waf系列之绕安全狗/index.html
@@ -617,7 +617,7 @@ Content-Length头长度大于4008
                 bottom: "0",
                 basePath: "https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/",
                 
-                role: roles,
+                role: dataArray[parseInt(Math.random()*dataArray.length)],
                 background: "",
                 opacity:  1 
             }
