--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
             var dataArray = new Array();
-            var dataArray = ["luyijiushi_2","aidang_2","bisimai_2","jianye_2","shengluyisi_2","xukufu_3"];
+            var dataArray = ["luyijiushi_2","aidang_2","shengluyisi_2"];
             var config = {
                 width: "315",
                 height: "450",
