--- a/kali修改为国内源/index.html
+++ b/kali修改为国内源/index.html
@@ -348,7 +348,7 @@ deb http://deb.debian.org/debian-security/ buster/updates main contrib non-free
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
             var dataArray = new Array();
-            var dataArray = ["luyijiushi_2","aidang_2","shengluyisi_2"];
+            var dataArray = ["luyijiushi_2","aidang_2","shengluyisi_2","xianghe_2"];
             var config = {
                 width: "315",
                 height: "450",
