--- a/404.html
+++ b/404.html
@@ -129,7 +129,7 @@
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
             var dataArray = new Array();
-            var dataArray = ["luyijiushi_2","aidang_2","shengluyisi_2"];
+            var dataArray = ["luyijiushi_2","aidang_2","shengluyisi_2","xianghe_2"];
             var config = {
                 width: "315",
                 height: "450",
