--- a/工具集/index.html
+++ b/工具集/index.html
@@ -188,7 +188,7 @@
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
             var dataArray = new Array();
-            var dataArray = ["luyijiushi_2","aidang_2","shengluyisi_2","xianghe_2"];
+            var dataArray = ["luyijiushi_2","aidang_2","shengluyisi_2","xianghe_2","chaijun_4"];
             var config = {
                 width: "315",
                 height: "450",
