--- a/绕waf系列之绕安全狗/index.html
+++ b/绕waf系列之绕安全狗/index.html
@@ -608,7 +608,7 @@ Content-Length头长度大于4008
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
             var dataArray = new Array();
-            var dataArray = ["luyijiushi_2","aidang_2","shengluyisi_2","xianghe_2"];
+            var dataArray = ["luyijiushi_2","aidang_2","shengluyisi_2","xianghe_2","chaijun_4"];
             var config = {
                 width: "315",
                 height: "450",
