--- a/安全技能书简版/index.html
+++ b/安全技能书简版/index.html
@@ -440,11 +440,11 @@
 </blockquote>
 <p><img
         class="lazyload"
-        data-src="/OSS/img/%e5%ae%89%e5%85%a8%e6%8a%80%e8%83%bd%e4%b9%a6%e7%ae%80%e7%89%88/1.png"
-        data-srcset="/OSS/img/%e5%ae%89%e5%85%a8%e6%8a%80%e8%83%bd%e4%b9%a6%e7%ae%80%e7%89%88/1.png, /OSS/img/%e5%ae%89%e5%85%a8%e6%8a%80%e8%83%bd%e4%b9%a6%e7%ae%80%e7%89%88/1.png 1.5x, /OSS/img/%e5%ae%89%e5%85%a8%e6%8a%80%e8%83%bd%e4%b9%a6%e7%ae%80%e7%89%88/1.png 2x"
+        data-src="https://cdn.jsdelivr.net/gh/CNbysec/CNbysec.github.io/OSS/img/%e5%ae%89%e5%85%a8%e6%8a%80%e8%83%bd%e4%b9%a6%e7%ae%80%e7%89%88/1.png"
+        data-srcset="https://cdn.jsdelivr.net/gh/CNbysec/CNbysec.github.io/OSS/img/%e5%ae%89%e5%85%a8%e6%8a%80%e8%83%bd%e4%b9%a6%e7%ae%80%e7%89%88/1.png, https://cdn.jsdelivr.net/gh/CNbysec/CNbysec.github.io/OSS/img/%e5%ae%89%e5%85%a8%e6%8a%80%e8%83%bd%e4%b9%a6%e7%ae%80%e7%89%88/1.png 1.5x, https://cdn.jsdelivr.net/gh/CNbysec/CNbysec.github.io/OSS/img/%e5%ae%89%e5%85%a8%e6%8a%80%e8%83%bd%e4%b9%a6%e7%ae%80%e7%89%88/1.png 2x"
         data-sizes="auto"
-        alt="/OSS/img/安全技能书简版/1.png"
-        title="/OSS/img/安全技能书简版/1.png"
+        alt="https://cdn.jsdelivr.net/gh/CNbysec/CNbysec.github.io/OSS/img/安全技能书简版/1.png"
+        title="https://cdn.jsdelivr.net/gh/CNbysec/CNbysec.github.io/OSS/img/安全技能书简版/1.png"
     /></p>
 <h2 id="http">HTTP</h2>
 <h3 id="burpsuite">BurpSuite</h3>
