--- a/404.html
+++ b/404.html
@@ -34,14 +34,7 @@
     <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="bysec"><img
-        class="lazyload logo"
-        data-src="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
-        data-srcset="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg, https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg 1.5x, https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg 2x"
-        data-sizes="auto"
-        alt="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
-        title="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
-    />bysec</a>
+            <a href="/" title="bysec">bysec</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/"><i class='fa-fw fas fa-home'></i> 首页 </a><a class="menu-item" href="/posts/"><i class='fa-fw fas fa-archive'></i> 归档 </a><a class="menu-item" href="/categories/"><i class='fa-fw fas fa-folder-open'></i> 分类 </a><a class="menu-item" href="/tags/"><i class='fa-fw fas fa-tags'></i> 标签 </a><a class="menu-item" href="/link/"><i class='fa-fw fas fa-link'></i> 友链 </a><a class="menu-item" href="/about/"><i class='fa-fw fas fa-comment-dots'></i> 关于 </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -64,14 +57,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="bysec"><img
-        class="lazyload logo"
-        data-src="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
-        data-srcset="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg, https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg 1.5x, https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg 2x"
-        data-sizes="auto"
-        alt="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
-        title="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
-    />bysec</a>
+                <a href="/" title="bysec">bysec</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
