--- a/安全技能书简版/index.html
+++ b/安全技能书简版/index.html
@@ -709,9 +709,7 @@
             <div class="post-info-license"></div>
         </div>
         <div class="post-info-line">
-            <div class="post-info-md"><span>
-                            <a class="link-to-markdown" href="/%E5%AE%89%E5%85%A8%E6%8A%80%E8%83%BD%E4%B9%A6%E7%AE%80%E7%89%88/index.md" target="_blank" rel="noopener noreferrer">阅读原始文档</a>
-                        </span></div>
+            <div class="post-info-md"></div>
             <div class="post-info-share">
                 <span></span>
             </div>
